# pheres

./: Makefile  README.markdown  cabal.project  pheres.cabal  stack-ffi-unescape.yaml  stack-lts10.yaml  stack-lts6.yaml  stack-lts7.yaml  stack-lts8.yaml  stack-lts9.yaml  stack-nightly.yaml  stack.yaml
Data/Aeson/: TH.hs
Data/Aeson/Parser/: Unescape.hs
Data/Aeson/Types/: FromJSON.hs  Generic.hs  ToJSON.hs
benchmarks/: Escape.hs  bench-parse.py  pheres-benchmarks.cabal
pheres-unescape-ffi/: pheres-unescape-ffi.cabal
tests/: UnitTests.hs
