name: pheres
version: 0.1.0.0

category: Text, Web, JSON
synopsis: Simple JSON parsing and encoding

description:
    A JSON parsing and encoding library optimized for ease of use.
    Forked from Aeson.
    .
    (A note on naming: in Greek mythology, Pheres was a brother of Aeson.)

homepage:    https://github.com/chris-martin/pheres
bug-reports: https://github.com/chris-martin/pheres/issues

stability: experimental
tested-with: GHC == 8.2.2
cabal-version: >= 1.10
build-type: Simple

license: BSD3
license-file: LICENSE

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

copyright: (c) 2018 Chris Martin
           (c) 2011-2016 Bryan O'Sullivan
           (c) 2011 MailRank, Inc.

extra-source-files:
    *.yaml
    README.markdown
    benchmarks/*.cabal
    benchmarks/*.hs
    benchmarks/*.py
    benchmarks/Compare/*.hs
    benchmarks/Makefile
    benchmarks/Typed/*.hs
    benchmarks/json-data/*.json
    cbits/*.c
    examples/*.cabal
    examples/*.hs
    examples/Twitter/*.hs
    ffi/Data/Aeson/Parser/*.hs
    include/*.h
    tests/JSONTestSuite/test_parsing/*.json
    tests/JSONTestSuite/test_transform/*.json
    pure/Data/Aeson/Parser/*.hs

flag developer
  description: operate in developer mode
  default: False
  manual: True

flag fast
  description: compile without optimizations
  default: False
  manual: True

flag bytestring-builder
  description: Depend on the bytestring-builder package for backwards compatibility.
  default: False
  manual: False

flag cffi
  description: Controls whether to include c-ffi bits or pure haskell. Default to False for security.
  default: False
  manual: True

library
  default-language: Haskell2010
  hs-source-dirs: . attoparsec-iso8601/ ffi pure

  exposed-modules:
    Data.Aeson
    Data.Aeson.Encoding
    Data.Aeson.Parser
    Data.Aeson.Text
    Data.Aeson.Types
    Data.Aeson.TH

    Data.Aeson.Encoding.Internal
    Data.Aeson.Internal
    Data.Aeson.Internal.Time
    Data.Aeson.Parser.Internal
    Data.Aeson.Parser.Unescape
    Data.Aeson.Parser.UnescapeFFI
    Data.Aeson.Parser.UnescapePure

  -- Deprecated modules
  exposed-modules:
    Data.Aeson.Encode

  other-modules:
    Data.Aeson.Compat
    Data.Aeson.Encoding.Builder
    Data.Aeson.Internal.Functions
    Data.Aeson.Parser.Time
    Data.Aeson.Types.FromJSON
    Data.Aeson.Types.Generic
    Data.Aeson.Types.ToJSON
    Data.Aeson.Types.Class
    Data.Aeson.Types.Internal
    Data.Attoparsec.Time
    Data.Attoparsec.Time.Internal

  build-depends:
    attoparsec >= 0.13.0.1,
    base >= 4.5 && < 5,
    base-compat >= 0.9.1 && < 0.10,
    containers >= 0.4.2,
    deepseq >= 1.3 && < 1.5,
    dlist >= 0.6,
    ghc-prim >= 0.2,
    hashable >= 1.1.2.0,
    scientific >= 0.3.4.7 && < 0.4,
    tagged >=0.8.3 && <0.9,
    template-haskell >= 2.7,
    text >= 1.2.3,
    th-abstraction >= 0.2.2 && < 0.3,
    time >= 1.1.1.4,
    time-locale-compat >= 0.1.1 && < 0.2,
    unordered-containers >= 0.2.5.0 && < 0.3,
    uuid-types >= 1.0.3 && <1.1,
    vector >= 0.8

  if flag(bytestring-builder)
    build-depends: bytestring >= 0.9.2 && < 0.10.4,
                   bytestring-builder >= 0.10.4 && < 1
  else
    build-depends: bytestring >= 0.10.4 && < 0.11

  if !impl(ghc >= 8.0)
    -- `Data.Semigroup` and `Control.Monad.Fail` and `Control.Monad.IO.Class` are available in base only since GHC 8.0 / base 4.9
    build-depends:
      semigroups >= 0.18.2 && < 0.19,
      transformers >= 0.2.2.0,
      transformers-compat >= 0.3,
      fail == 4.9.*

  if !impl(ghc >= 7.10)
    -- `Numeric.Natural` is available in base only since GHC 7.10 / base 4.8
    build-depends: nats >= 1 && < 1.2

  ghc-options: -Wall

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  if flag(fast)
    ghc-options: -O0
  else
    ghc-options: -O2

  include-dirs: include

  c-sources: cbits/unescape_string.c
  cpp-options: -DCFFI

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs
  c-sources: cbits/unescape_string.c
  ghc-options: -Wall -threaded -rtsopts

  other-modules:
    DataFamilies.Properties
    DataFamilies.Instances
    DataFamilies.Encoders
    DataFamilies.Types
    Encoders
    ErrorMessages
    Functions
    Instances
    Options
    Properties
    SerializationFormatSpec
    Types
    UnitTests
    UnitTests.NullaryConstructors

  build-depends:
    HUnit,
    QuickCheck >= 2.10.0.1 && < 2.11,
    pheres,
    integer-logarithms >= 1 && <1.1,
    attoparsec,
    base,
    base-compat,
    base-orphans >= 0.5.3 && <0.7,
    base16-bytestring,
    containers,
    directory,
    dlist,
    filepath,
    generic-deriving >= 1.10 && < 1.13,
    ghc-prim >= 0.2,
    hashable >= 1.2.4.0,
    scientific,
    tagged,
    template-haskell,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    text,
    time,
    time-locale-compat,
    unordered-containers,
    uuid-types,
    vector,
    quickcheck-instances >= 0.3.16

  if flag(bytestring-builder)
    build-depends: bytestring >= 0.9 && < 0.10.4,
                   bytestring-builder >= 0.10.4 && < 1
  else
    build-depends: bytestring >= 0.10.4

  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >= 0.18.2 && < 0.19,
      transformers >= 0.2.2.0,
      transformers-compat >= 0.3

  if !impl(ghc >= 7.10)
    build-depends: nats >=1 && <1.2

  if impl(ghc >= 7.8)
    build-depends: hashable-time >= 0.2 && <0.3

  if flag(fast)
    ghc-options: -fno-enable-rewrite-rules

source-repository head
  type:     git
  location: git://github.com/chris-martin/pheres.git
