name: pheres-benchmarks
version: 0

build-type: Simple
cabal-version: >=1.10

flag bytestring-builder
  description: Depend on the bytestring-builder package for backwards compatibility.
  default: False
  manual: False

library
  default-language: Haskell2010

  if flag(bytestring-builder)
    build-depends: bytestring >= 0.9 && < 0.10.4,
                   bytestring-builder >= 0.10.4 && < 1
  else
    build-depends: bytestring >= 0.10.4

  build-depends: pheres

  reexported-modules:
    Data.Aeson,
    Data.Aeson.Encoding,
    Data.Aeson.Parser.Internal,
    Data.Aeson.Parser.UnescapeFFI,
    Data.Aeson.Parser.UnescapePure,
    Data.Aeson.Text,
    Data.Aeson.TH,
    Data.Aeson.Types

executable pheres-benchmark-auto-compare
  default-language: Haskell2010
  main-is: AutoCompare.hs
  hs-source-dirs: .
  ghc-options: -Wall -O2 -rtsopts
  other-modules:
    Auto.T.D
    Auto.T.BigRecord
    Auto.T.BigProduct
    Auto.T.BigSum
    Auto.G.D
    Auto.G.BigRecord
    Auto.G.BigProduct
    Auto.G.BigSum
    Options
  build-depends:
    pheres-benchmarks,
    base,
    criterion,
    deepseq,
    template-haskell

executable pheres-benchmark-escape
  default-language: Haskell2010
  main-is: Escape.hs
  hs-source-dirs: ../examples .
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    bytestring,
    criterion >= 1.0,
    deepseq,
    ghc-prim,
    text

executable pheres-benchmark-compare
  default-language: Haskell2010
  main-is: Compare.hs
  hs-source-dirs: ../examples .
  ghc-options: -Wall -O2 -rtsopts
  other-modules:
    Compare.BufferBuilder
    Compare.JsonBench
    Compare.JsonBuilder
    Twitter
    Twitter.Manual
    Typed.Common
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    buffer-builder,
    bytestring,
    criterion >= 1.0,
    deepseq,
    ghc-prim,
    json-builder,
    text

executable pheres-benchmark-micro
  default-language: Haskell2010
  main-is: Micro.hs
  hs-source-dirs: ../examples .
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    bytestring,
    criterion >= 1.0,
    deepseq,
    ghc-prim,
    text

executable pheres-benchmark-typed
  default-language: Haskell2010
  main-is: Typed.hs
  hs-source-dirs: ../examples .
  ghc-options: -Wall -O2 -rtsopts
  other-modules:
    Twitter
    Twitter.Generic
    Twitter.Manual
    Twitter.Options
    Twitter.TH
    Typed.Common
    Typed.Generic
    Typed.Manual
    Typed.TH
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    criterion >= 1.0,
    deepseq,
    ghc-prim,
    text,
    time

  if flag(bytestring-builder)
    build-depends: bytestring >= 0.9 && < 0.10.4,
                   bytestring-builder >= 0.10.4 && < 1
  else
    build-depends: bytestring >= 0.10.4

executable pheres-benchmark-compare-with-json
  default-language: Haskell2010
  main-is: CompareWithJSON.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    blaze-builder,
    bytestring,
    criterion,
    deepseq,
    json,
    text

executable pheres-benchmark-aeson-encode
  default-language: Haskell2010
  main-is: AesonEncode.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    attoparsec,
    base,
    base-compat,
    bytestring,
    deepseq,
    time

executable pheres-benchmark-aeson-parse
  default-language: Haskell2010
  main-is: AesonParse.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    attoparsec,
    base,
    base-compat,
    bytestring,
    time

executable pheres-benchmark-json-parse
  default-language: Haskell2010
  main-is: JsonParse.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    base,
    base-compat,
    deepseq,
    json,
    time

executable pheres-benchmark-dates
  default-language: Haskell2010
  main-is: Dates.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    base,
    base-compat,
    bytestring,
    criterion,
    deepseq,
    pheres-benchmarks,
    text,
    time
  if impl(ghc >= 8.2)
    ghc-options: -Wno-simplifiable-class-constraints

executable pheres-benchmark-map
  default-language: Haskell2010
  main-is: AesonMap.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    criterion >= 1.0,
    bytestring,
    containers,
    deepseq,
    hashable,
    tagged,
    text,
    unordered-containers

executable pheres-benchmark-foldable
  default-language: Haskell2010
  main-is: AesonFoldable.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    pheres-benchmarks,
    base,
    base-compat,
    criterion >= 1.0,
    bytestring,
    containers,
    deepseq,
    hashable,
    tagged,
    text,
    unordered-containers,
    vector
