name: pheres-unescape-ffi
version: 0.1.0.0

category: Text, Web, JSON
synopsis: ?

description:
    ?

homepage:    https://github.com/chris-martin/pheres
bug-reports: https://github.com/chris-martin/pheres/issues

stability: experimental
cabal-version: >= 1.10
build-type: Simple

license: BSD3
license-file: LICENSE

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

copyright: (c) 2018 Chris Martin
           (c) 2011-2016 Bryan O'Sullivan
           (c) 2011 MailRank, Inc.

extra-source-files: cbits/*.c

source-repository head
    type: git
    location: git://github.com/chris-martin/pheres.git

library
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

    exposed-modules:
        Data.Pheres.Parser.UnescapeFFI

    build-depends:
        base
      , bytestring
      , text

    c-sources: cbits/unescape_string.c
